[gd_scene load_steps=11 format=3 uid="uid://bmsjv3ywtsahm"]

[ext_resource type="Script" path="res://Scenes/3dH1/3dH1.gd" id="1_x6jjf"]
[ext_resource type="Script" path="res://Scenes/Overworld/3dcharacter_body.gd" id="2_8wuld"]
[ext_resource type="SpriteFrames" uid="uid://jtk22f2psyhj" path="res://Scenes/Overworld/Playerbody_SF.tres" id="3_jyao2"]
[ext_resource type="Texture2D" uid="uid://ijvw68j4ekxw" path="res://textures/carpentry/woodenFlooring.png" id="5_btnv3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_j8h41"]

[sub_resource type="BoxShape3D" id="BoxShape3D_a2p4j"]
size = Vector3(2.5, 2.5, 2.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_q14tk"]
size = Vector3(2.5, 2.5, 2.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jnuc3"]
albedo_texture = ExtResource("5_btnv3")
uv1_scale = Vector3(8, 8, 8)

[sub_resource type="QuadMesh" id="QuadMesh_m1rvb"]
size = Vector2(40, 20)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_kmst6"]
data = PackedVector3Array(20, -10, 0, -20, -10, 0, 20, 10, 0, -20, -10, 0, -20, 10, 0, 20, 10, 0)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_x6jjf")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -3.246, 0.1, -0.556)
script = ExtResource("2_8wuld")
speed = 200

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(0.970874, 0, 0, 0, -4.24383e-08, 0.970874, 0, -0.970874, -4.24383e-08, 0, 10, 0)
projection = 1
fov = 168.0
size = 42.269
near = 0.031
far = 74.03

[node name="CollisionPolygon3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("BoxShape3D_j8h41")

[node name="RayCast3D" type="RayCast3D" parent="Player"]

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="Player"]
transform = Transform3D(30, 0, 0, 0, -1.31134e-06, 30, 0, -30, -1.31134e-06, 0, 0, 0)
sprite_frames = ExtResource("3_jyao2")
animation = &"idledown"

[node name="3dH1Exitfront" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.88137, 0, 1.935)

[node name="3dH1Exitfront" type="CollisionShape3D" parent="3dH1Exitfront"]
shape = SubResource("BoxShape3D_a2p4j")

[node name="3dH1Exitback" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.1533, 0, -8.66828)

[node name="3dH1Exitback" type="CollisionShape3D" parent="3dH1Exitback"]
shape = SubResource("BoxShape3D_q14tk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -3.01, 0, -9.177)
material_override = SubResource("StandardMaterial3D_jnuc3")
mesh = SubResource("QuadMesh_m1rvb")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.77181, 4.05156, -19.3177)
material_override = SubResource("StandardMaterial3D_jnuc3")
mesh = SubResource("QuadMesh_m1rvb")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_kmst6")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 16.859, 4.04157, -9.177)
material_override = SubResource("StandardMaterial3D_jnuc3")
mesh = SubResource("QuadMesh_m1rvb")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -22.8443, 4.08577, -9.177)
material_override = SubResource("StandardMaterial3D_jnuc3")
mesh = SubResource("QuadMesh_m1rvb")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, -3.01, 3.98737, 0.865336)
material_override = SubResource("StandardMaterial3D_jnuc3")
mesh = SubResource("QuadMesh_m1rvb")

[connection signal="body_entered" from="3dH1Exitfront" to="." method="_on_H1Exitfront_body_entered"]
[connection signal="body_entered" from="3dH1Exitback" to="." method="_on_H1Exitback_body_entered"]
